Feature/0.8.3 (#43)
* Add PlaceholderAPI as softdepend

* Use own api for placeholders

* simplify night utils

* spawner Suppression is now true per default